--- a/css/custom.css
+++ b/css/custom.css
@@ -19,26 +19,94 @@
     text-decoration: none;
     transition: background-color 0.3s;
 }
+
 .button:hover {
     background-color: darkgray; /* Hover effect */
 }
+
 .button svg {
     width: 24px;
     height: 24px;
     fill: white;
 }
 
-h3{
+h3 {
     margin-top: 40px;
+}
+
+h5 {
+    margin-top: 20px;
 }
 
 img {
     max-width: 50%;
     height: auto;
-    width: auto\9; /* ie8 */
+    width: auto;
+    min-width: 200px;
+    /* max-width: 100%;
+    object-fit: cover;
+    height: 20vh; */
 }
 
 .visual {
     margin-top: 40px;
     max-width: 30%;
+}
+
+.header-image {
+    @media (max-width: 992px) {
+        margin-bottom: 36px;
+    }
+}
+
+.header-text {
+    @media (min-width: 768px) and (max-width: 992px) {
+        margin-left: -15%;
+    }
+    @media (min-width: 992px) {
+        margin-left: -20%;
+    }
+}
+
+.bullet-icon {
+    margin-right: 4px;
+}
+
+.header-button {
+    margin-top: -8px;
+    margin-left: 6px;
+    border-radius: 20px;
+}
+
+.timeline {
+    position: relative;
+    padding: 0;
+    list-style: none;
+}
+
+.timeline-item {
+    position: relative;
+    padding: 20px 0;
+}
+
+.timeline-item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 20px;
+    width: 2px;
+    background-color: #dee2e6;
+}
+
+.timeline-item-content {
+    position: relative;
+    margin-left: 40px;
+    padding: 10px;
+    border: 1px solid #dee2e6;
+    border-radius: 4px;
+}
+
+.timeline-item-content h5 {
+    margin: 0 0 5px;
 }
