feat: experience icons

--- a/css/custom.css
+++ b/css/custom.css
@@ -94,6 +94,22 @@ img {
     margin: 0 0 5px;
 }
 
+/* .timeline-ta {
+    border: 3px solid green;
+}
+
+.timeline-swe {
+    border: 3px solid orange;
+}
+
+.timeline-liaison {
+    border: 3px solid red;
+}
+
+.timeline-research {
+    border: 3px solid mediumorchid;
+} */
+
 .work-experience-card {
     margin-bottom: 20px;
 }
