feat: copyright notice

--- a/css/custom.css
+++ b/css/custom.css
@@ -94,22 +94,6 @@ img {
     margin: 0 0 5px;
 }
 
-/* .timeline-ta {
-    border: 3px solid green;
-}
-
-.timeline-swe {
-    border: 3px solid orange;
-}
-
-.timeline-liaison {
-    border: 3px solid red;
-}
-
-.timeline-research {
-    border: 3px solid mediumorchid;
-} */
-
 .work-experience-card {
     margin-bottom: 20px;
 }
@@ -124,4 +108,14 @@ img {
 
 .writing-list {
     margin-top: -10px;
+}
+
+footer {
+    margin-top: 30px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+footer p {
+    margin-top: 10px;
 }
